--- a/CleanMadness/src/components/Footer.astro
+++ b/CleanMadness/src/components/Footer.astro
@@ -115,6 +115,28 @@ import web from "../assets/mdi_web.svg";
     }
   }
 
+  @media screen and (max-width:  915px) {
+    footer {
+      height: 200px;
+    }
+
+    /* --------Social icons-------- */
+    .social {
+      margin-top: 50px;
+      width: 300px;
+    }
+
+    
+    /* --------Copyringht-------- */
+    
+    .copyright h3 {
+      font-size: 12px;
+      text-align: center;
+      margin-top: 0px;
+    }
+
+}
+
   @media only screen and (max-width: 412px) {
     footer {
       height: 200px;
