--- a/CleanMadness/src/components/InfoGame.astro
+++ b/CleanMadness/src/components/InfoGame.astro
@@ -38,8 +38,15 @@ import Why from "./Why.astro";
   @media only screen and (max-width:  1700px) {
   .info {
     width: auto;
-    height: 1200px;
+    height: 1000px;
   }
+}
+@media screen and (max-width:  915px) {
+  .info {
+    width: auto;
+    height: 950px;
+  }
+
 }
  
    @media only screen and (max-width: 412px) {
