--- a/CleanMadness/src/components/Support.astro
+++ b/CleanMadness/src/components/Support.astro
@@ -69,7 +69,25 @@ import edojo from "../assets/Logo EDOJO.svg";
   .logo {
     width: 233px;
   }
+  @media screen and (max-width:  915px) {
+    .support {
+    margin-top: 250px;
+  }
+  
+  
+  .line {
+    width: 50px;
+  }
+  .logos {
+    column-gap: 3rem;
+    margin-top: 100px;
+  }
 
+  .logo {
+    width: 200px;
+  }
+
+}
    @media only screen and (max-width: 412px) {
     .support {
     margin-top: 250px;
