--- a/CleanMadness/src/pages/index.astro
+++ b/CleanMadness/src/pages/index.astro
@@ -76,6 +76,24 @@ import frame2 from "../assets/Frame 2.png";
       background-color: blue;
     }
     }
+
+    @media screen and (max-width:  915px) {
+      .frame img {
+      min-width: 100px;
+      margin-top:20px;
+    }
+
+    .info{
+      margin-top: -80px;
+    }
+    .footer{
+      margin-top:-15px ;
+    }
+    body{
+      background-color: blue;
+    }
+
+}
     /* Iphone 12 Pro 390x844 */
      @media screen and (max-width: 412px) {
     .frame img {
@@ -89,10 +107,10 @@ import frame2 from "../assets/Frame 2.png";
     .footer{
       margin-top:25px ;
     }
-    body{
-      background-color: blue;
     }
-    }
+
+    
+    
 
     
 
