--- a/CleanMadness/src/components/Game.astro
+++ b/CleanMadness/src/components/Game.astro
@@ -133,23 +133,28 @@ import google from "../assets/google-play-badge.png";
     }
   }
   
+
+  @media screen and (max-width:  915px) {
+    .game {  
+      height: 550px;
+    }
+    
+    .logoColorpx {
+      width:250px;
+    }
+  }
   @media screen and (max-width: 412px) {
     .game {
       background-image: url(../assets/ls.svg);
       height: 900px;
       width: auto;
       display: flex;
+      
     }
     .portada {
-      margin-top: 540px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+      margin-top: 700px;}    
     .logoColorpx {
       width: 200px;
-      margin-top: 0px;
     }
 
     .text p {
