--- a/CleanMadness/src/components/Navbar.astro
+++ b/CleanMadness/src/components/Navbar.astro
@@ -74,6 +74,26 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
       height: 42px;
     }
   }
+  @media screen and (max-width:  915px) {
+    .logo {
+      display: none;
+    }
+    .navbar {
+      height: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      column-gap: 0.6rem;/* ver */
+      margin-top: 40px;
+      padding: 0 0px;
+    }
+    .option {
+      box-shadow: 0px 0px 25px #222;
+      backdrop-filter: blur(10px);
+    }
+  }
+
+}
 
   @media screen and (max-width: 412px) {
     .logo {
@@ -85,7 +105,7 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
       display: flex;
       justify-content: space-between;
       align-items: center;
-      column-gap: 0.6rem;/* ver */
+      column-gap: 0rem;/* ver */
       margin-top: 40px;
       padding: 0 0px;
     }
@@ -101,7 +121,7 @@ import logo from "../assets/LogotipoCOLOR-V2 1.png";
       font-family: "Nunito", sans-serif;
       font-size: 14px;
       color: white;
-      text-decoration: none;
+      
     }
   }
   @media screen and (max-width: 390px) {
