--- a/CleanMadness/src/components/Why.astro
+++ b/CleanMadness/src/components/Why.astro
@@ -154,6 +154,10 @@ import villan3 from "../assets/SPRITE ENEMY 02.png";
     .why {
     margin-top:-50px;
   }
+
+  .description {
+      margin-top: 50px;
+    }
   }
   @media screen and (max-width:  915px) {
     
